# hGeoPatterns

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  TODO  hGeoPatterns.json
docs/: Building.md  Installation.md  Reference.md  buildCoords.md  closest.md  displacementLayer.md  filterArrayData.md  generateCoords.md  index.html  interpolator.md  oceanSampleLayers.md  pointCloudFilter.md  readAttribute.md  samplePoints.md  sampleTextures.md  sampleVolume.md  utilityNodes.md
osl/: CMakeLists.txt  buildCoords.osl  displacementLayer.osl  filterArrayData.osl  generateCoords.osl  packManifold.osl  ripples.osl  sampleTextures.osl  unpackArrayData.osl  unpackClosestData.osl  unpackManifold.osl
osl/include/: hGeoStructsOSL.h
presets/Vop/: oslbuilder.idx
python/: build_hda.py  configure_build_hda.json
rixplugins/Args/: closest.args  interpolator.args  oceanSampleLayers.args  pointCloudFilter.args  readAttribute.args  samplePoints.args  sampleVolume.args
scripts/vop/: vopcompilermenu.cmd
src/: CMakeLists.txt  closest.cpp  hGeoStructsRIS.h  interpolator.cpp  oceanSampleLayers.cpp  pointCloudFilter.cpp  readAttribute.cpp  samplePoints.cpp  sampleVolume.cpp
vex/CVex/: oceanSampleLayers.vfl
vop/: ManifoldStruct.json  hGeoStructs.json  structs.json
